--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.180.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
     "three": "^0.180.0"
   },
