--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "containment",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
-    "@types/three": "^0.180.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-moment": "^1.0.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "moment": "^2.29.4",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.4.1",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2",
+    "react-transition-group": "^4.4.5",
+    "tailwind-merge": "^2.5.5",
     "three": "^0.180.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7"
+    "@tailwindcss/postcss": "^4.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^4.0.0",
+    "vite": "^6.0.3"
   }
 }
